# JeZR

./: .env.example  .gitignore  README.md  pyproject.toml
context/: athlete.template.json  athlete.template.md  sample_plan.json  setup_prompt.md
docs/: openclaw.md
jezr/: __init__.py  backup.py  cli.py  config.py  db.py  intervals_client.py  notifier.py  planner.py  poller.py  review.py  upload.py  validator.py  weather.py
